Add changes to ccwc.java for coding challenge 1